--- a/include/config.h.in
+++ b/include/config.h.in
@@ -166,6 +166,9 @@
 /* Define if use need to use localtime instead of timezone and daylight */
 #undef USE_TM_GMTOFF
 
+/* Define if you want to collect performance statistics -- linux only */
+#undef USE_PERF
+
 /* Define if you compiler likes 0xnnnnll long long constants  */
 #define HAVE_LL_CONSTANTS
 
