--- a/javamds/javamds.vcproj
+++ b/javamds/javamds.vcproj
@@ -4,6 +4,7 @@
 	Version="8.00"
 	Name="javamds"
 	ProjectGUID="{4CC77AA4-5CB1-43A6-AF31-99569E542CB6}"
+	RootNamespace="javamds"
 	>
 	<Platforms>
 		<Platform
@@ -74,7 +75,7 @@
 			<Tool
 				Name="VCLinkerTool"
 				AdditionalOptions="/MACHINE:I386"
-				AdditionalDependencies="odbc32.lib odbccp32.lib $(JDK_DIR)\lib\jvm.lib"
+				AdditionalDependencies="odbc32.lib odbccp32.lib &quot;$(JDK_DIR)\lib\jvm.lib&quot;"
 				OutputFile="$(OutDir)/javamds.dll"
 				LinkIncremental="1"
 				SuppressStartupBanner="true"
