--- a/mdssql/mdssql.vcproj
+++ b/mdssql/mdssql.vcproj
@@ -4,6 +4,7 @@
 	Version="8.00"
 	Name="mdssql"
 	ProjectGUID="{34579291-BE7E-4509-BED6-CF66604AFA53}"
+	RootNamespace="mdssql"
 	>
 	<Platforms>
 		<Platform
@@ -46,7 +47,7 @@
 			<Tool
 				Name="VCCLCompilerTool"
 				Optimization="0"
-				AdditionalIncludeDirectories="$(sql_dir)\DevTools\Include"
+				AdditionalIncludeDirectories="..\include"
 				PreprocessorDefinitions="_DEBUG;WIN32;_WINDOWS;_USRDLL;MDSSQL_EXPORTS;DBNTWIN32"
 				BasicRuntimeChecks="3"
 				RuntimeLibrary="1"
@@ -74,7 +75,7 @@
 			<Tool
 				Name="VCLinkerTool"
 				AdditionalOptions="/MACHINE:I386"
-				AdditionalDependencies="odbc32.lib odbccp32.lib &quot;$(SQL_DIR)\DevTools\Lib\ntwdblib.lib&quot;"
+				AdditionalDependencies="odbc32.lib odbccp32.lib ..\ntwdblib.lib"
 				OutputFile="$(OutDir)/mdssql.dll"
 				LinkIncremental="2"
 				SuppressStartupBanner="true"
@@ -141,7 +142,7 @@
 			<Tool
 				Name="VCCLCompilerTool"
 				InlineFunctionExpansion="1"
-				AdditionalIncludeDirectories="$(SQL_DIR)\DevTools\Include"
+				AdditionalIncludeDirectories="..\include"
 				PreprocessorDefinitions="NDEBUG;WIN32;_WINDOWS;_USRDLL;MDSSQL_EXPORTS;DBNTWIN32"
 				StringPooling="true"
 				RuntimeLibrary="0"
@@ -169,7 +170,7 @@
 			<Tool
 				Name="VCLinkerTool"
 				AdditionalOptions="/MACHINE:I386"
-				AdditionalDependencies="odbc32.lib odbccp32.lib &quot;$(SQL_DIR)\DevTools\Lib\ntwdblib.lib&quot;"
+				AdditionalDependencies="odbc32.lib odbccp32.lib ..\ntwdblib.lib"
 				OutputFile="$(OutDir)/mdssql.dll"
 				LinkIncremental="1"
 				SuppressStartupBanner="true"
@@ -227,6 +228,10 @@
 			Name="Header Files"
 			Filter="h;hpp;hxx;hm;inl"
 			>
+			<File
+				RelativePath="..\include\sqlfront.h"
+				>
+			</File>
 		</Filter>
 		<Filter
 			Name="Resource Files"
