--- a/javatraverser/Makefile.in
+++ b/javatraverser/Makefile.in
@@ -88,7 +88,11 @@ FEGroupSetup.java\
 ISIS_GAINSetup.java\
 FASTCAMSetup.java\
 ST133Setup.java\
-RFXVersionSetup.java
+RFXVersionSetup.java\
+WE800Setup.java \
+WE900Setup.java \
+MHDPRConfigV1Setup.java
+
 
 
 SOURCES = ActionData.java\
