--- a/javatraverser/Makefile.in
+++ b/javatraverser/Makefile.in
@@ -90,8 +90,7 @@ FASTCAMSetup.java\
 ST133Setup.java\
 RFXVersionSetup.java\
 WE800Setup.java \
-WE900Setup.java \
-MHDPRConfigV1Setup.java
+WE900Setup.java 
 
 
 
