Added CAEN V1731 Device

--- a/javatraverser/Makefile.in
+++ b/javatraverser/Makefile.in
@@ -90,7 +90,8 @@ FASTCAMSetup.java\
 ST133Setup.java\
 RFXVersionSetup.java\
 WE800Setup.java \
-WE900Setup.java 
+WE900Setup.java \
+CAENV1731Setup.java 
 
 
 
