--- a/javamds/Makefile.in
+++ b/javamds/Makefile.in
@@ -10,7 +10,7 @@ LDFLAGS=@LDFLAGS@
 LIBS=@JVM@ @LIBS@
 INSTALL=@top_srcdir@/conf/install-sh -c
 
-SOURCES = javamds.c ServerSupport.c JavaData.c JavaTrav.c
+SOURCES = javamds.c ServerSupport.c JavaData.c JavaTrav.c mdsobjects.c
 OBJECTS = $(SOURCES:.c=.o)
 EXPORTS = javamds.export
 
