--- a/javadispatcher/jDispatcher.properties
+++ b/javadispatcher/jDispatcher.properties
@@ -65,9 +65,13 @@ jDispatcher.phase_5.id = 10
 
 jDispatcher.phase_5.name = SECONDARY_DATA_ACQUISITION
 
-jDispatcher.phase_6.id = 99
+jDispatcher.phase_6.id = 31
 
-jDispatcher.phase_6.name = FINISH_SHOT
+jDispatcher.phase_6.name = ABNORMAL
+
+jDispatcher.phase_7.id = 99
+
+jDispatcher.phase_7.name = FINISH_SHOT
 
 
 
