--- a/cacheshr/Makefile.in
+++ b/cacheshr/Makefile.in
@@ -6,7 +6,7 @@ RM=$(top_srcdir)/devscripts/rm_if
 prefix=@prefix@
 exec_prefix=@exec_prefix@
 CFLAGS=@CFLAGS@ @SRBINCLUDE@ -fPIC
-CXXFLAGS=-g -O2 -fPIC
+CXXFLAGS=-g -O2 -fPIC @CFLAGS@
 LDFLAGS=@LDFLAGS@
 LIBS=-L@MAKESHLIBDIR@ -lMdsShr -lTreeShr -lTdiShr @LIBS@ @SRBLIB@
 INSTALL=@top_srcdir@/conf/install-sh -c
