--- a/javadispatcher/Makefile.in
+++ b/javadispatcher/Makefile.in
@@ -12,7 +12,7 @@ ActionServer.java       MdsIp.java              MdsServerListener.java  Server.j
 Balancer.java           MdsMonitor.java         MonitorEvent.java       ServerEvent.java \
 MdsMonitorEvent.java    MonitorListener.java    ServerListener.java \
 InfoServer.java         MdsServer.java          NetworkEvent.java       jDispatchMonitor.java	jServer.java \
-KillServer.java		ServerShowDialog.java
+KillServer.java			ServerShowDialog.java 	ServerInfo.java 		ServersInfoPanel.java
 
 
 CLASSES = $(SOURCES:.java=.class)
@@ -41,7 +41,7 @@ install:
 
 @MAKEJAVADIR@classes : ; mkdir @MAKEJAVADIR@classes
 
-@MAKEJAVADIR@classes/jDispatcher.jar: jDispatcherIp.class jDispatchMonitor.class jServer.class
+@MAKEJAVADIR@classes/jDispatcher.jar: jDispatcherIp.class jDispatchMonitor.class jServer.class KillServer.class
 	$(JAR) c0f $@ *.class
 
 jDispatcherIp.class: 	$(SOURCES)
@@ -52,6 +52,10 @@ jDispatchMonitor.class: 	$(SOURCES)
 
 jServer.class: 	$(SOURCES)
 	$(JAVAC) -g jServer.java
+	
+KillServer.class: 	$(SOURCES)
+	$(JAVAC) -g KillServer.java	
+
 
 @MAKEBINDIR@ : ; mkdir @MAKEBINDIR@
 
