--- a/mdsobjects/cpp/Makefile.in
+++ b/mdsobjects/cpp/Makefile.in
@@ -5,8 +5,8 @@ top_srcdir=@top_srcdir@
 RM=$(top_srcdir)/devscripts/rm_if
 prefix=@prefix@
 exec_prefix=@exec_prefix@
-CFLAGS=@CFLAGS@ @SRBINCLUDE@ -fPIC
-CXXFLAGS=-g -O2 -fPIC @CFLAGS@
+CFLAGS=@CFLAGS@ @SRBINCLUDE@ -fPIC -I../../tdishr
+CXXFLAGS=-g -O2 -Wno-deprecated -fPIC @CFLAGS@
 LDFLAGS=@LDFLAGS@
 LIBS=-L@MAKESHLIBDIR@ -lMdsShr -lTreeShr -lTdiShr @LIBS@ @SRBLIB@
 INSTALL=@top_srcdir@/conf/install-sh -c
@@ -17,16 +17,15 @@ CXXSOURCES = \
 SOURCES = mdsdata.c mdstree.c
 
 OBJECTS = $(CXXSOURCES:.cpp=.o)  $(SOURCES:.c=.o)
-EXPORTS = ObjectsCppShr.exports
+EXPORTS = MdsObjectsCppShr.exports
 
-all : @MAKELIBDIR@ @MAKESHLIBDIR@ @MAKESHLIBDIR@libObjectsCppShr@SHARETYPE@
-@MAKELIBDIR@libObjectsCppShr.a
+all : @MAKELIBDIR@ @MAKESHLIBDIR@ @MAKESHLIBDIR@libMdsObjectsCppShr@SHARETYPE@ @MAKELIBDIR@libMdsObjectsCppShr.a
 
 clean:
 	@ $(RM) $(OBJECTS)
 	@ $(RM) so_locations
-	@ $(RM) @MAKESHLIBDIR@libObjectsCppShr@SHARETYPE@
-	@ $(RM) @MAKELIBDIR@libObjectsCppShr.a
+	@ $(RM) @MAKESHLIBDIR@libMdsObjectsCppShr@SHARETYPE@
+	@ $(RM) @MAKELIBDIR@libMdsObjectsCppShr.a
 
 depend:
 	 @makedepend -- $(CFLAGS) -- $(SOURCES)
@@ -36,24 +35,24 @@ install:
                 mkdir @libdir@; \
                 chmod 755 @libdir@; \
         fi;
-	$(INSTALL) -m 755  @MAKESHLIBDIR@libObjectsCppShr@SHARETYPE@ @libdir@
+	$(INSTALL) -m 755  @MAKESHLIBDIR@libMdsObjectsCppShr@SHARETYPE@ @libdir@
 	if test @SHARETYPE@ != .a ; then \
-		$(INSTALL) -m 644  @MAKELIBDIR@libObjectsCppShr.a @libdir@; \
+		$(INSTALL) -m 644  @MAKELIBDIR@libMdsObjectsCppShr.a @libdir@; \
 	fi;
 
 
-@MAKESHLIBDIR@libCacheShr@SHARETYPE@ : $(OBJECTS) @EXPORTS_FILE@ 
+@MAKESHLIBDIR@libMdsObjectsCppShr@SHARETYPE@ : $(OBJECTS) @EXPORTS_FILE@ 
 	$(LD) -o $@ $(CXXFLAGS) @LINKSHARED@ $(OBJECTS) $(LIBS) -lTdiShr -lTreeShr -lMdsShr 
 
-@MAKELIBDIR@libCacheShr.a : $(OBJECTS)
+@MAKELIBDIR@libMdsObjectsCppShr.a : $(OBJECTS)
 	$(AR) -cr $@ $(OBJECTS)
 	@RANLIB@ $@
 
 @MAKELIBDIR@ :
 	mkdir @MAKELIBDIR@
 
-ObjectsCppShr.exports: ObjectsCppShr.def
-	sed -e /LIBRARY/\;/\;/d ObjectsCppShr.def > $@
+ObjectsCppShr.exports: MdsObjectsCppShr.def
+	sed -e /LIBRARY/\;/\;/d MdsObjectsCppShr.def > $@
 
 
 	
