Added mdsobjects/cpp and rtevents in configure Added #include <MdsTypes.h> in treeshr as a consequence of the introcuction of segment stuff in treeshr

--- a/Makefile.in
+++ b/Makefile.in
@@ -21,6 +21,8 @@ PARTS = \
         xmdsshr \
 	xtreeshr \
 	cacheshr \
+	mdsobjects/cpp \
+	rtevents \
         @MDSTCPIP@ \
         dwscope \
         mdslibidl \
