Dw Setup for CAEN V1740

--- a/javatraverser/Makefile.in
+++ b/javatraverser/Makefile.in
@@ -91,7 +91,9 @@ ST133Setup.java\
 RFXVersionSetup.java\
 WE800Setup.java \
 WE900Setup.java \
-CAENV1731Setup.java 
+CAENV1731Setup.java \
+CAENV1740Setup.java
+
 
 
 
