adding calibration nodes to dt196 - new device type dt196a

--- a/mitdevices/Makefile.in
+++ b/mitdevices/Makefile.in
@@ -31,6 +31,7 @@ UIDS = \
 @MAKEUIDDIR@DC1394A.uid \
 @MAKEUIDDIR@DT101.uid \
 @MAKEUIDDIR@DT196.uid \
+@MAKEUIDDIR@DT196A.uid \
 @MAKEUIDDIR@DT200.uid \
 @MAKEUIDDIR@DT_ACQ16.uid \
 @MAKEUIDDIR@DT200DA.uid \
@@ -683,6 +684,7 @@ MitDevices.exports: MitDevices.def
 @MAKEUIDDIR@DC1394A.uid : DC1394A.uil ; $(UIL) -o @MAKEUIDDIR@DC1394A.uid DC1394A.uil
 @MAKEUIDDIR@DT101.uid : DT101.uil ; $(UIL) -o @MAKEUIDDIR@DT101.uid DT101.uil
 @MAKEUIDDIR@DT196.uid : DT196.uil ; $(UIL) -o @MAKEUIDDIR@DT196.uid DT196.uil
+@MAKEUIDDIR@DT196A.uid : DT196A.uil ; $(UIL) -o @MAKEUIDDIR@DT196A.uid DT196A.uil
 @MAKEUIDDIR@DT200.uid : DT200.uil ; $(UIL) -o @MAKEUIDDIR@DT200.uid DT200.uil
 @MAKEUIDDIR@DT200DA.uid : DT200DA.uil ; $(UIL) -o @MAKEUIDDIR@DT200DA.uid DT200DA.uil
 @MAKEUIDDIR@DT216.uid : DT216.uil ; $(UIL) -o @MAKEUIDDIR@DT216.uid DT216.uil
