--- a/mitdevices/Makefile.in
+++ b/mitdevices/Makefile.in
@@ -18,6 +18,7 @@ UIL=@UIL@ -I$(top_srcdir)/include
 MATH_LIBS=-L@MAKESHLIBDIR@ -lMdsMath
 LIBDC1394_LIBS=-ldc1394 -lraw1394
 LIBDC1394_INCS=-I/usr/local/include/dc1394 -I/usr/local/include/libraw1394
+export @LIBPATH@=@MAKESHLIBDIR@
 
 UIDS = \
 @MAKEUIDDIR@A12.uid \
