--- a/manpages/Makefile.in
+++ b/manpages/Makefile.in
@@ -28,21 +28,22 @@ clean :
 	@ $(RM) $(directories)
 	@ $(RM) $(top_srcdir)/man
 
-install: 
-	- @MAKEBINDIR@mkdirhier $(exec_prefix)/man/man1
+install:
+	$(INSTALL) -d $(exec_prefix)/man -m a+rx
+	$(INSTALL) -d $(exec_prefix)/man/man1 -m a+rx
+	$(INSTALL) -d $(exec_prefix)/man/man5 -m a+rx
 	$(INSTALL) -m 755  $(top_srcdir)/man/man1/mdsplus.1.gz $(exec_prefix)/man/man1
 	$(INSTALL) -m 755  $(top_srcdir)/man/man1/traverser.1.gz $(exec_prefix)/man/man1
-	- @MAKEBINDIR@mkdirhier $(exec_prefix)/man/man5
 	$(INSTALL) -m 755  $(top_srcdir)/man/man5/mdsplus.conf.5.gz $(exec_prefix)/man/man5
 	$(INSTALL) -m 755  $(top_srcdir)/man/man5/.mdsplus.5.gz $(exec_prefix)/man/man5
 	$(INSTALL) -m 755  $(top_srcdir)/man/man5/mdsip.hosts.5.gz $(exec_prefix)/man/man5
 
 
 $(top_srcdir)/man/man1 :
-	@MAKEBINDIR@mkdirhier $@
+	$(INSTALL) -d $@
 
 $(top_srcdir)/man/man5 :
-	@MAKEBINDIR@mkdirhier $@
+	$(INSTALL) -d $@
 
 $(top_srcdir)/man/man1/traverser.1.gz : traverser.groff
 	$(GROFF) $(GROFF_FLAGS) traverser.groff | gzip - -c > $@
