--- a/javadispatcher/Makefile.in
+++ b/javadispatcher/Makefile.in
@@ -34,8 +34,8 @@ install:
         fi;
 	$(INSTALL) -m 644  @MAKEJAVADIR@classes/jDispatcher.jar @exec_prefix@/java/classes
 	$(INSTALL) -m 644  jDispatcher.properties @exec_prefix@/java/classes
-	$(INSTALL) -m 755  @MAKEBINDIR@jDispatcherIp @exec_prefix@/bin
-	$(INSTALL) -m 755  @MAKEBINDIR@jDispatchMonitor @exec_prefix@/bin
+	$(INSTALL) -m 755  @MAKEBINDIR@jDispatcherIp @bindir@
+	$(INSTALL) -m 755  @MAKEBINDIR@jDispatchMonitor @bindir@
 
 @MAKEJAVADIR@ : ; mkdir @MAKEJAVADIR@
 
