--- a/javatraverser/Makefile.in
+++ b/javatraverser/Makefile.in
@@ -260,7 +260,7 @@ install:
                 chmod -R 755 @exec_prefix@/java; \
         fi;
 	$(INSTALL) -m 644  @MAKEJAVADIR@classes/jTraverser.jar @exec_prefix@/java/classes
-	$(INSTALL) -m 755  @MAKEBINDIR@jTraverser @exec_prefix@/bin
+	$(INSTALL) -m 755  @MAKEBINDIR@jTraverser @bindir@
 
 @MAKEJAVADIR@ : ; mkdir @MAKEJAVADIR@
 
