--- a/configure.in
+++ b/configure.in
@@ -326,16 +326,16 @@ alpha*-dec-osf*) CFLAGS="$CFLAGS -pthread -ieee";
        HUP_TO_INETD="kill -HUP \`ps -e -o pid -o command | grep /usr/sbin/inetd | grep -v grep | awk '{print $1}'\`";;
 *86*linux*) 
        CFLAGS="$CFLAGS -fpic -fno-strict-aliasing";
-       FORLD="g77";
+       FORLD="$F77";
        if ( uname -m | grep 64 > /dev/null ) 
        then
          if ( echo $target | grep 64 > /dev/null )
          then
            SYB64="64"
-           CFLAGS="$CFLAGS -m64";
+           CFLAGS="$CFLAGS -m64"
            LD="ld -m elf_x86_64 --oformat elf64-x86-64 --no-warn-mismatch"
-	   FFLAGS="$FFLAGS -m64";
-           FORLD="g77 -m64";
+           FFLAGS="$FFLAGS -m64"
+           FORLD="$F77 -m64"
            UILCMD=uil
            uiddir="${uiddir}64"
 	   MAKELIBDIR="\$(top_srcdir)/lib64/"
@@ -346,8 +346,8 @@ alpha*-dec-osf*) CFLAGS="$CFLAGS -pthread -ieee";
          else
            CFLAGS="$CFLAGS -m32";
            LD="ld -m elf_i386 --oformat elf32-i386 --no-warn-mismatch"
-	   FFLAGS="$FFLAGS -m32";
-           FORLD="g77 -m32";
+           FFLAGS="$FFLAGS -m32"
+           FORLD="$F77 -m32"
            UILCMD=uil32
            uiddir="${uiddir}32"
            MAKELIBDIR="\$(top_srcdir)/lib32/"
@@ -361,7 +361,15 @@ alpha*-dec-osf*) CFLAGS="$CFLAGS -pthread -ieee";
            JVM="-L$jdk_dir/jre/lib/i386/client -ljvm -L$jdk_dir/jre/lib/i386  -ljava -L$jdk_dir/jre/lib/i386/native_threads -lhpi";
        fi
        CAMSHR="camshr";
-       FFLAGS="$FFLAGS -fpic -Wno-globals -fno-backslash";
+       if (test "$F77" = "g77"); then
+         FFLAGS="$FFLAGS -Wno-globals"
+         LOC="%loc"
+       elif (test "$F77" = "gfortran"); then
+         FFLAGS="$FFLAGS -fno-range-check"
+         LOC="loc"
+       fi
+       FOR_LDFLAGS="-lg2c"
+       FFLAGS="$FFLAGS -fpic -fno-backslash";
        LDSHARE="-Wl,-Bdynamic ";
        LDARC="-Wl,-Bstatic ";
        LD_LDSHARE="-Bdynamic ";
@@ -378,8 +386,20 @@ alpha*-dec-osf*) CFLAGS="$CFLAGS -pthread -ieee";
        HUP_TO_XINETD="/etc/rc.d/init.d/xinetd restart";
        HUP_TO_INETD="kill -HUP \`/sbin/pidof inetd\`";;
 *linux*) CFLAGS="$CFLAGS -fpic -fno-strict-aliasing";
+       echo "---------------------------------- linux -------------"
        CAMSHR="camshr";
-       FFLAGS="$FFLAGS -fpic -Wno-globals -fno-backslash";
+       if (test "$F77" = "g77"); then
+         FFLAGS="$FFLAGS -Wno-globals"
+         FOR_LDFLAGS="-lg2c"
+         FORLD="$F77"
+         LOC="%loc"
+       elif (test "$F77" = "gfortran"); then
+         FFLAGS="$FFLAGS -fno-range-check";
+         FORLD="$F77"
+         LOC="loc"
+         FOR_LDFLAGS="-lg2c"
+       fi
+       FFLAGS="$FFLAGS -fpic -fno-backslash";
        LDSHARE="-Wl,-Bdynamic ";
        LDARC="-Wl,-Bstatic ";
        LD_LDSHARE="-Bdynamic ";
