--- a/configure.in
+++ b/configure.in
@@ -221,8 +221,12 @@ CAMSHR=""
 CFLAGS="$CFLAGS $GCCPROF $MEMCHK -I\$(top_srcdir)/include"
 FFLAGS="$FFLAGS  -I\$(top_srcdir)/include"
 
-: ${uiddir=$exec_prefix/uid}
-
+if test "$prefix" = "NONE"
+then
+  : ${uiddir:=$ac_default_prefix/uid}
+else
+  : ${uiddir:=$prefix/uid}
+fi
 MAKEUIDDIR="\$(top_srcdir)/uid/"
 MAKESHLIBDIR="\$(top_srcdir)/lib/"
 MAKEBINDIR="\$(top_srcdir)/bin/"
