--- a/configure.in
+++ b/configure.in
@@ -221,12 +221,16 @@ CAMSHR=""
 CFLAGS="$CFLAGS $GCCPROF $MEMCHK -I\$(top_srcdir)/include"
 FFLAGS="$FFLAGS  -I\$(top_srcdir)/include"
 
-if test "$exec_prefix" = "NONE"
+if test "$exec_prefix" = "NONE" -a "$prefix" = "NONE"
 then
-  : ${uiddir:=$ac_default_exec_prefix/uid}
+  : ${uiddir:=$ac_default_prefix/uid}
+elif test "$exec_prefix" = "NONE"
+then
+  : ${uiddir:=$prefix/uid}
 else
   : ${uiddir:=$exec_prefix/uid}
 fi
+echo "uiddir=$uiddir --------------------------------------------"
 MAKEUIDDIR="\$(top_srcdir)/uid/"
 MAKESHLIBDIR="\$(top_srcdir)/lib/"
 MAKEBINDIR="\$(top_srcdir)/bin/"
