--- a/javadispatcher/Makefile.in
+++ b/javadispatcher/Makefile.in
@@ -1,5 +1,6 @@
 SHELL=/bin/sh
 prefix=@prefix@
+exec_prefix=@exec_prefix@
 top_srcdir=@top_srcdir@
 RM=$(top_srcdir)/devscripts/rm_if
 JAVADIR = @MAKEJAVADIR@classes
