--- a/javatraverser/Makefile.in
+++ b/javatraverser/Makefile.in
@@ -92,7 +92,10 @@ RFXVersionSetup.java\
 WE800Setup.java \
 WE900Setup.java \
 CAENV1731Setup.java \
-CAENV1740Setup.java
+CAENV1740Setup.java \
+PLRMSetup.java \
+DPO7054Setup.java \
+L9109Setup.java
 
 
 
