Added New PCAT for for RFX

--- a/javatraverser/Makefile.in
+++ b/javatraverser/Makefile.in
@@ -33,6 +33,7 @@ RFXPoloidalSetup.java\
 RFXToroidalSetup.java\
 RFXPMSetupSetup.java\
 RFXPCSetupSetup.java \
+RFXPC4SetupSetup.java \
 RFXPVSetupSetup.java \
 RFXTFSetupSetup.java \
 RFXABUnitsSetup.java \
