--- a/mdsobjects/cpp/cpp.vcproj
+++ b/mdsobjects/cpp/cpp.vcproj
@@ -259,7 +259,7 @@
 			UniqueIdentifier="{93995380-89BD-4b04-88EB-625FBE52EBFB}"
 			>
 			<File
-				RelativePath=".\mdsobjects.h"
+				RelativePath="..\..\include\mdsobjects.h"
 				>
 			</File>
 		</Filter>
