--- a/Makefile.in
+++ b/Makefile.in
@@ -7,7 +7,8 @@ JAVA_APS = javamds \
 	   javascope \
            javatraverser \
 	   javadispatcher \
-	   javaclient
+	   javaclient \
+	   mdsobjects/java
 
 HDF5_APS = hdf5
 
