--- a/xtreeshr/Makefile.in
+++ b/xtreeshr/Makefile.in
@@ -6,7 +6,7 @@ RM=$(top_srcdir)/devscripts/rm_if
 prefix=@prefix@
 exec_prefix=@exec_prefix@
 CFLAGS=@CFLAGS@ @SRBINCLUDE@
-LDFLAGS=@LDFLAGS@ @CFLAGS@
+LDFLAGS=@LDFLAGS@
 LIBS=-L@MAKESHLIBDIR@ -lMdsShr @LIBS@ @SRBLIB@
 INSTALL=@top_srcdir@/conf/install-sh -c
 
@@ -42,7 +42,7 @@ install:
 
 
 @MAKESHLIBDIR@libXTreeShr@SHARETYPE@ : $(OBJECTS) @EXPORTS_FILE@ 
-	$(LD) -o $@ @LINKSHARED@ $(OBJECTS) $(LIBS) -lTdiShr -lTreeShr -lMdsShr
+	$(CC) -o $@ @LINKSHARED@ @CFLAGS@ $(OBJECTS) $(LIBS) -lTdiShr -lTreeShr -lMdsShr
 
 @MAKELIBDIR@libXTreeShr.a : $(OBJECTS)
 	$(AR) -cr $@ $(OBJECTS)
