Clean class files from MDSplus subdirectory

--- a/mdsobjects/java/Makefile.in
+++ b/mdsobjects/java/Makefile.in
@@ -75,7 +75,7 @@ all:  @MAKEJAVADIR@ @MAKEJAVADIR@classes \
      @MAKEJAVADIR@classes/mdsobjects.jar
 
 clean:
-	@ $(RM) *.class
+	@ $(RM) MDSplus/*.class
 	@ $(RM) @MAKEJAVADIR@classes/mdsobjects.jar
 
 depend: ; @ :
