--- a/include/config.h.in
+++ b/include/config.h.in
@@ -201,5 +201,11 @@
 #define _pointer_int int
 #endif
 
+#ifdef HAVE_WINDOWS_H
+#define EXPORT __declspec(dllexport)
+#else
+#define EXPORT
+#endif
+
 #define _CONFIG_INCLUDED
 #endif
