--- a/mdssql/mdssql.vcproj
+++ b/mdssql/mdssql.vcproj
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="Windows-1252"?>
 <VisualStudioProject
 	ProjectType="Visual C++"
-	Version="8.00"
+	Version="9.00"
 	Name="mdssql"
 	ProjectGUID="{34579291-BE7E-4509-BED6-CF66604AFA53}"
 	RootNamespace="mdssql"
+	TargetFrameworkVersion="131072"
 	>
 	<Platforms>
 		<Platform
@@ -48,7 +49,7 @@
 				Name="VCCLCompilerTool"
 				Optimization="0"
 				AdditionalIncludeDirectories="..\include"
-				PreprocessorDefinitions="_DEBUG;WIN32;_WINDOWS;_USRDLL;MDSSQL_EXPORTS;DBNTWIN32"
+				PreprocessorDefinitions="_DEBUG;WIN32;_WINDOWS;_USRDLL;MDSSQL_EXPORTS;DBNTWIN32;_CRT_SECURE_NO_WARNINGS"
 				BasicRuntimeChecks="3"
 				RuntimeLibrary="1"
 				UsePrecompiledHeader="0"
@@ -82,6 +83,8 @@
 				ModuleDefinitionFile=".\MdsSql.def"
 				GenerateDebugInformation="true"
 				ProgramDatabaseFile="$(IntDir)/mdssql.pdb"
+				RandomizedBaseAddress="1"
+				DataExecutionPrevention="0"
 				ImportLibrary="$(OutDir)/mdssql.lib"
 			/>
 			<Tool
@@ -101,9 +104,6 @@
 			/>
 			<Tool
 				Name="VCAppVerifierTool"
-			/>
-			<Tool
-				Name="VCWebDeploymentTool"
 			/>
 			<Tool
 				Name="VCPostBuildEventTool"
@@ -176,6 +176,8 @@
 				SuppressStartupBanner="true"
 				ModuleDefinitionFile=".\MdsSql.def"
 				ProgramDatabaseFile=".\Release/mdssql.pdb"
+				RandomizedBaseAddress="1"
+				DataExecutionPrevention="0"
 				ImportLibrary="$(OutDir)/mdssql.lib"
 			/>
 			<Tool
@@ -195,9 +197,6 @@
 			/>
 			<Tool
 				Name="VCAppVerifierTool"
-			/>
-			<Tool
-				Name="VCWebDeploymentTool"
 			/>
 			<Tool
 				Name="VCPostBuildEventTool"
