--- a/javatraverser/javatraverser.vcproj
+++ b/javatraverser/javatraverser.vcproj
@@ -1,11 +1,12 @@
 <?xml version="1.0" encoding="Windows-1252"?>
 <VisualStudioProject
 	ProjectType="Visual C++"
-	Version="8.00"
+	Version="9.00"
 	Name="javatraverser"
 	ProjectGUID="{5A9BCCFC-3A2D-422C-8A61-CA80C2E3BAA6}"
 	RootNamespace="javatraverser"
 	Keyword="MakeFileProj"
+	TargetFrameworkVersion="131072"
 	>
 	<Platforms>
 		<Platform
